# Claude-Code-Free

./: .env.example  .gitignore  README.md  arquitectura.md  litellm_config.yaml  main.py  middleware.py  pyproject.toml  render.yaml
scratch/: test_computer_use.py
tests/: conftest.py  test_config.py  test_integration.py  test_validation.py
