[project]
name = "nim-proxy"
version = "0.1.0"
description = "LiteLLM Proxy optimizado para NVIDIA NIM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pyyaml>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
